[package]
name = "incognita-socket-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Incognita Socket server"
keywords = ["server", "invisible-inc", "incognita-socket"]
categories = ["command-line-utilities"]
homepage = "https://github.com/kaya3/incognita-socket-server"
repository = "https://github.com/kaya3/incognita-socket-server"
readme = "README.md"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
arg = {version = "0.3.1", features = ["std"]}
async-std = "1.12.0"
futures = "0.3.25"
